# steam-review-exporter

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEX.md  DEVELOPER_GUIDE.md  INSTRUCTIONS.md  LICENSE  README.md  RELEASE_NOTES.md  export_reviews.py  pyproject.toml  renovate.json
.github/workflows/: python-package.yml  python-publish.yml
skills/cli-export/: SKILL.md
skills/release/: SKILL.md
skills/steam-api/: SKILL.md
skills/testing/: SKILL.md
steamreviews/: __init__.py  api.py  cache.py  download_reviews.py  export.py  language_detection.py  models.py  results.py  scraper.py  storage.py  utils.py
steamreviews/tests/: test_api.py  test_cache.py  test_cli.py  test_download_reviews.py  test_export.py  test_integration.py  test_language_detection.py  test_models.py  test_scraper.py  test_unit.py
steamreviews/tests/cassettes/test_api/: test_api_client_vcr_snapshot.yaml
tasks/: lessons.md  todo.md
