[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "steam-review-exporter"
version = "2.0.3"
description = "Command-line tool to download Steam reviews and export them to Excel."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "sacrificeking"},
]
license = "MIT"
keywords = ["steam", "review", "reviews", "download", "api", "excel"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.28.0,<1.0",
    "pydantic>=2.0.0,<3.0",
    "tqdm>=4.66.0,<5.0",
    "lingua-language-detector>=2.0.2,<3.0",
]

[project.optional-dependencies]
cli = [
    "polars>=1.0.0,<2.0",
    "xlsxwriter>=3.2.0,<4.0",
    "rich>=13.0.0,<16.0",
]
dev = [
    "ruff>=0.15.0,<1.0",
    "mypy>=2.0.0,<3.0",
    "pytest>=8.0.0,<10.0",
    "pytest-cov>=5.0.0,<8.0",
    "pytest-asyncio>=0.24.0,<2.0",
    "pytest-recording>=0.13.0,<1.0",
]

[project.urls]
Homepage = "https://github.com/sacrificeking/steam-review-exporter"

[project.scripts]
steam-review-exporter = "export_reviews:main"

[tool.setuptools]
py-modules = ["export_reviews"]
packages = ["steamreviews"]

[tool.pytest.ini_options]
testpaths = ["steamreviews/tests"]
python_files = ["test_*.py"]
markers = [
    "integration: tests that call the live Steam API",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "RUF"]  # Pyflakes, pycodestyle, bugbear, isort, pyupgrade, flake8-simplify, ruff
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "^build/",
    "^\\.venv/",
]
